--- a/app/src/main/res/layout/character_view.xml
+++ b/app/src/main/res/layout/character_view.xml
@@ -1,54 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="16dp"
+    xmlns:tools="http://schemas.android.com/tools"
+
     app:cardElevation="8dp"
-    android:layout_margin="1dp">
+    android:layout_margin="8dp"
+    android:background="#000000">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="188dp"
-        android:layout_height="wrap_content"
-        android:background="@color/white">
+        android:layout_height="282dp"
+        android:background="@color/black">
 
+        <!-- Imagen del personaje -->
         <ImageView
             android:id="@+id/iv_character_picture"
-            android:layout_width="110dp"
-            android:layout_height="93dp"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintDimensionRatio="1:1"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.25"
             tools:srcCompat="@tools:sample/avatars" />
 
-        <LinearLayout
-            android:layout_width="188dp"
-            android:layout_height="50dp"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <!-- Línea roja -->
+        <View
+            android:id="@+id/red_line"
+            android:layout_width="0dp"
+            android:layout_height="6dp"
+            android:background="@android:color/holo_red_dark"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_character_picture">
+            app:layout_constraintTop_toBottomOf="@id/iv_character_picture" />
 
-            <TextView
-                android:id="@+id/tv_character_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                tools:text="#1 - Rick Sanchez" />
-
-            <TextView
-                android:id="@+id/tv_description"
-                android:layout_width="164dp"
-                android:layout_height="wrap_content"
-                tools:text="Male" />
-
-
-        </LinearLayout>
-
+        <!-- Nombre del personaje -->
+        <TextView
+            android:id="@+id/tv_character_name"
+            android:layout_width="174dp"
+            android:layout_height="54dp"
+            android:layout_marginTop="4dp"
+            android:gravity="center_horizontal"
+            android:paddingTop="4dp"
+            android:text="MAGNETO"
+            android:textColor="@android:color/white"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/red_line" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
