--- a/app/src/main/res/layout/character_view.xml
+++ b/app/src/main/res/layout/character_view.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="188dp"
+    android:layout_height="282dp"
     xmlns:tools="http://schemas.android.com/tools"
-
     app:cardElevation="8dp"
     android:layout_margin="8dp"
     android:background="#000000">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="188dp"
-        android:layout_height="282dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@color/black">
 
         <!-- Imagen del personaje -->
@@ -38,18 +38,17 @@
         <!-- Nombre del personaje -->
         <TextView
             android:id="@+id/tv_character_name"
-            android:layout_width="174dp"
-            android:layout_height="54dp"
-            android:layout_marginTop="4dp"
-            android:gravity="center_horizontal"
-            android:paddingTop="4dp"
-            android:text="MAGNETO"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
             android:textColor="@android:color/white"
-            android:textSize="17sp"
+            android:textSize="14sp"
             android:textStyle="bold"
+            android:text="hero"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/red_line" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
+
