--- a/app/src/main/res/layout/activity_inspect_character.xml
+++ b/app/src/main/res/layout/activity_inspect_character.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_margin="8dp"
-        app:cardCornerRadius="16dp"
+        app:cardCornerRadius="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -21,8 +21,8 @@
 
             <ImageView
                 android:id="@+id/iv_character_photo"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="407dp"
+                android:layout_height="298dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -30,11 +30,13 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/avatars" />
 
+
             <TextView
                 android:id="@+id/tv_character_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+
                 android:layout_marginTop="8dp"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
@@ -65,6 +67,16 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_character_name"
                 tools:text="Character Description" />
 
+            <View
+                android:id="@+id/red_line"
+                android:layout_width="0dp"
+                android:layout_height="6dp"
+
+                android:background="@android:color/holo_red_dark"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ProgressBar
@@ -77,4 +89,55 @@
             android:layout_height="wrap_content" />
 
     </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/btn_action1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="1dp"
+        app:backgroundTint="@null"
+        android:background="@drawable/button_background"
+        android:text="Comics"
+        android:layout_marginBottom="8dp"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
+        app:layout_constraintEnd_toStartOf="@+id/btn_action2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cv_character" />
+
+    <Button
+        android:id="@+id/btn_action2"
+        android:layout_width="0dp"
+        app:backgroundTint="@null"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="8dp"
+        android:textColor="@android:color/white"
+        android:text="Series"
+        android:textStyle="bold"
+        android:background="@drawable/button_background"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn_action1"
+        app:layout_constraintTop_toBottomOf="@id/cv_character" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_comics_and_series"
+        android:layout_marginTop="4dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/btn_action2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+<ProgressBar
+    android:id="@+id/pb_comics_and_series"
+    style="?android:attr/progressBarStyle"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toTopOf="@id/rv_comics_and_series"
+    app:layout_constraintBottom_toBottomOf="@id/rv_comics_and_series"
+    app:layout_constraintStart_toStartOf="@id/rv_comics_and_series"
+    app:layout_constraintEnd_toEndOf="@id/rv_comics_and_series" />
 </androidx.constraintlayout.widget.ConstraintLayout>
